tests/ui/comptime/comptime_impl.stderr
error: `#[rustc_comptime]` attribute cannot be used on inherent impl blocks
  --> $DIR/comptime_impl.rs:11:1
   |
LL | #[rustc_comptime]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_comptime]` can only be applied to functions

error: `#[rustc_comptime]` attribute cannot be used on trait impl blocks
  --> $DIR/comptime_impl.rs:17:1
   |
LL | #[rustc_comptime]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_comptime]` can only be applied to functions

error: comptime fns can only be called at compile time
  --> $DIR/comptime_impl.rs:21:9
   |
LL |         comptime_fn();
   |         ^^^^^^^^^^^^^

error[E0277]: the trait bound `Bar: const Foo` is not satisfied
  --> $DIR/comptime_impl.rs:31:9
   |
LL |     Bar.foo();
   |         ^^^
   |
help: make the `impl` of trait `Foo` `const`
   |
LL | impl const Foo for Bar {
   |      +++++

error[E0277]: the trait bound `Bar: const Foo` is not satisfied
  --> $DIR/comptime_impl.rs:33:9
   |
LL |     Bar.bar();
   |         ^^^
   |
help: make the `impl` of trait `Foo` `const`
   |
LL | impl const Foo for Bar {
   |      +++++

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
